# HotelProblem

./: .gitignore  CMakeLists.txt
include/: Algorithm.h  FileManager.h  InsertNewCustomer.h  Movement.h  Node.h  Problem.h  SimulatedAnnealing.h  Solution.h  SwapCustomers.h  SwapCustomersInTrip.h  SwapHotels.h  SwapWithUnusedCustomers.h
instances/: Format description.txt  rename.py  s.py
instances/SET1_1-2/: 100-30-1-2.ophs  100-35-1-2.ophs  100-40-1-2.ophs  100-45-1-2.ophs  102-50-1-2.ophs  102-60-1-2.ophs  64-45-1-2.ophs  64-50-1-2.ophs  64-55-1-2.ophs  64-60-1-2.ophs  64-65-1-2.ophs  64-70-1-2.ophs  64-75-1-2.ophs  64-80-1-2.ophs  66-125-1-2.ophs  66-130-1-2.ophs  66-40-1-2.ophs  66-45-1-2.ophs  66-50-1-2.ophs  66-55-1-2.ophs  66-60-1-2.ophs  T1-65-1-2.ophs  T1-70-1-2.ophs  T1-73-1-2.ophs  T1-75-1-2.ophs  T1-80-1-2.ophs  T1-85-1-2.ophs  T3-100-1-2.ophs  T3-105-1-2.ophs  T3-65-1-2.ophs  T3-75-1-2.ophs  T3-80-1-2.ophs  T3-85-1-2.ophs  T3-90-1-2.ophs  T3-95-1-2.ophs
instances/SET1_2-3/: 100-30-2-3.ophs  100-35-2-3.ophs  100-40-2-3.ophs  100-45-2-3.ophs  102-50-2-3.ophs  102-60-2-3.ophs  64-45-2-3.ophs  64-50-2-3.ophs  64-55-2-3.ophs  64-60-2-3.ophs  64-65-2-3.ophs  64-70-2-3.ophs  64-75-2-3.ophs  64-80-2-3.ophs  66-125-2-3.ophs  66-130-2-3.ophs  66-40-2-3.ophs  66-45-2-3.ophs  66-50-2-3.ophs  66-55-2-3.ophs  66-60-2-3.ophs  T1-65-2-3.ophs  T1-70-2-3.ophs  T1-73-2-3.ophs  T1-75-2-3.ophs  T1-80-2-3.ophs  T1-85-2-3.ophs  T3-100-2-3.ophs  (+7 more)
src/: Algorithm.cpp  FileManager.cpp  Movement.cpp  Node.cpp  Problem.cpp  SimulatedAnnealing.cpp  Solution.cpp  main.cpp
(+694 files in other folders)
